--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,25 +20,25 @@ jobs:
     strategy:
         matrix:
             cfg:
-            - { os: windows-2019, shell: cmd, arch: x86, runtime: vc14, CMAKE_PARAM_G: 'Visual Studio 14', CMAKE_PARAM_A: Win32, CFG: x86_vc14, CHOCO_VS_TOOLS: 'vcbuildtools', CPCFG: '-win32', PY_V_MDM: 3.4, PY_V_MM: 34 }
-            - { os: windows-2019, shell: cmd, arch: x64, runtime: vc16, CMAKE_PARAM_G: 'Visual Studio 16', CMAKE_PARAM_A: x64, CFG: x64_vc16, CPCFG: '-win_amd64', PY_V_MDM: 3.9, PY_V_MM: 39 }
+#            - { os: windows-2019, shell: cmd, arch: x86, runtime: vc14, CMAKE_PARAM_G: 'Visual Studio 14', CMAKE_PARAM_A: Win32, CHOCO_VS_TOOLS: 'vcbuildtools', CPCFG: '-win32', PY_V_M: 3, PY_V_m: 4 }
+            - { os: windows-2019, shell: cmd, arch: x64, runtime: vc16, CMAKE_PARAM_G: 'Visual Studio 16', CMAKE_PARAM_A: x64, CPCFG: '-win_amd64', PY_V_M: 3, PY_V_m: 9 }
     steps: 
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.cfg.PY_V_MDM }}
+        python-version: ${{ matrix.cfg.PY_V_M }}.${{ matrix.cfg.PY_V_m }}
         architecture: ${{ matrix.cfg.arch }}
     - run: |
-        python --version
-        echo ${{ matrix.cfg.CFG }}
-    - run: choco install -y vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
-      if: matrix.cfg.CHOCO_VS_TOOLS=='vcbuildtools'
-    - run: choco install -y ${{ matrix.cfg.CHOCO_VS_TOOLS }} winflexbison
-      if: matrix.cfg.CHOCO_VS_TOOLS!='vcbuildtools'
-    - run: choco install -y doxygen.install graphviz & python -m pip install --upgrade pip==19.1.1 & pip install --upgrade pyIbex & pip install --upgrade wheel setuptools & refreshenv.cmd
-      if: matrix.cfg.PY_V_MM=='34'
-    - run: choco install -y doxygen.install graphviz & python -m pip install --upgrade pip & pip install --upgrade pyIbex & pip install --upgrade wheel setuptools & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install --upgrade breathe sphinx-issues sphinx-tabs sphinx_rtd_theme & refreshenv.cmd
-      if: matrix.cfg.PY_V_MM!='34'
+        python -c "import sys; print(sys.version)"
+        echo ${{ matrix.cfg.PY_V_M }}.${{ matrix.cfg.PY_V_m }}
+#    - run: choco install -y -r --no-progress vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
+#      if: matrix.cfg.CHOCO_VS_TOOLS=='vcbuildtools'
+#    - run: choco install -y -r --no-progress ${{ matrix.cfg.CHOCO_VS_TOOLS }} winflexbison
+#      if: matrix.cfg.CHOCO_VS_TOOLS!='vcbuildtools'
+    - run: choco install -y -r --no-progress doxygen.install graphviz & python -m pip install --upgrade pip==19.1.1 & pip install --upgrade pyIbex & pip install --upgrade wheel setuptools & refreshenv.cmd
+      if: matrix.cfg.PY_V_M=='3' && matrix.cfg.PY_V_m=='4'
+    - run: choco install -y -r --no-progress doxygen.install graphviz & python -m pip install --upgrade pip & pip install --upgrade pyIbex & pip install --upgrade wheel setuptools & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install --upgrade breathe sphinx-issues sphinx-tabs sphinx_rtd_theme & refreshenv.cmd
+      if: matrix.cfg.PY_V_M!='3' || matrix.cfg.PY_V_m!='4'
     - run: |
-        cmake .
+        cmake -G ${{ matrix.cfg.CMAKE_PARAM_G }} -A ${{ matrix.cfg.CMAKE_PARAM_A }} .
         cmake --build .
