--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
         matrix:
             cfg:
-#            - { os: windows-2019, shell: cmd, arch: x86, runtime: vc14, CMAKE_PARAM_G: 'Visual Studio 14', CMAKE_PARAM_A: Win32, CHOCO_VS_TOOLS: 'vcbuildtools', CPCFG: '-win32', PY_V_M: 3, PY_V_m: 4 }
+            - { os: windows-2019, shell: cmd, arch: x86, runtime: vc14, CMAKE_PARAM_G: 'Visual Studio 14', CMAKE_PARAM_A: Win32, CHOCO_VS_TOOLS: 'vcbuildtools', CPCFG: '-win32', PY_V_MAJ: 3, PY_V_MIN: 4 }
             - { os: windows-2019, shell: cmd, arch: x64, runtime: vc16, CMAKE_PARAM_G: 'Visual Studio 16', CMAKE_PARAM_A: x64, CPCFG: '-win_amd64', PY_V_MAJ: 3, PY_V_MIN: 9 }
     steps: 
     - uses: actions/checkout@v2
@@ -31,14 +31,16 @@ jobs:
     - run: |
         python -c "import sys; print(sys.version)"
         echo ${{ matrix.cfg.PY_V_MAJ }}.${{ matrix.cfg.PY_V_MIN }}
-#    - run: choco install -y -r --no-progress vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
-#      if: matrix.cfg.CHOCO_VS_TOOLS=='vcbuildtools'
-#    - run: choco install -y -r --no-progress ${{ matrix.cfg.CHOCO_VS_TOOLS }} winflexbison
-#      if: matrix.cfg.CHOCO_VS_TOOLS!='vcbuildtools'
+        mklink %SYSTEMROOT%\System32\wget.exe C:\msys64\usr\bin\wget.exe
+        wget --help
+    - run: choco install -y -r --no-progress vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
+      if: matrix.cfg.CHOCO_VS_TOOLS=='vcbuildtools'
+    - run: choco install -y -r --no-progress ${{ matrix.cfg.CHOCO_VS_TOOLS }} winflexbison
+      if: matrix.cfg.CHOCO_VS_TOOLS!='vcbuildtools'
     - run: choco install -y -r --no-progress doxygen.install graphviz & python -m pip install --upgrade pip==19.1.1 & pip install --upgrade pyIbex & pip install --upgrade wheel setuptools & refreshenv.cmd
       if: matrix.cfg.PY_V_MAJ=='3' && matrix.cfg.PY_V_MIN=='4'
     - run: choco install -y -r --no-progress doxygen.install graphviz & python -m pip install --upgrade pip & pip install --upgrade pyIbex & pip install --upgrade wheel setuptools & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install --upgrade breathe sphinx-issues sphinx-tabs sphinx_rtd_theme & refreshenv.cmd
       if: matrix.cfg.PY_V_MAJ!='3' || matrix.cfg.PY_V_MIN!='4'
     - run: |
-        cmake -G ${{ matrix.cfg.CMAKE_PARAM_G }} -A ${{ matrix.cfg.CMAKE_PARAM_A }} .
+        cmake -G "${{ matrix.cfg.CMAKE_PARAM_G }}" -A ${{ matrix.cfg.CMAKE_PARAM_A }} .
         cmake --build .
