--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,7 +31,7 @@ jobs:
     - run: |
         python -c "import sys; print(sys.version)"
         echo ${{ matrix.cfg.PY_V_MAJ }}.${{ matrix.cfg.PY_V_MIN }}
-        mklink %SYSTEMROOT%\System32\wget.exe C:\msys64\usr\bin\wget.exe
+        mklink %SYSTEMROOT%\System32\wget.exe C:\msys64\usr\bin\wget.exe & true
         wget --version
     - run: choco install -y -r --no-progress vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
       if: matrix.cfg.CHOCO_VS_TOOLS=='vcbuildtools'
