--- a/OLD/2021-01-02 (0) cache-vs-opencv-github-actions.yml
+++ b/OLD/2021-01-02 (0) cache-vs-opencv-github-actions.yml
@@ -34,7 +34,7 @@ jobs:
       shell: bash
     - uses: actions/checkout@v2
 #    - run: choco install -y -r --no-progress wget
-    - run: mklink %SYSTEMROOT%\System32\wget.exe C:\msys64\usr\bin\wget.exe
+    - run: mklink %SYSTEMROOT%\System32\wget.exe C:\msys64\usr\bin\wget.exe & true
     - uses: actions/cache@v2
       id: cache-cmake_extra_tools
       with:
