--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -29,10 +29,11 @@ jobs:
         python-version: ${{ matrix.cfg.PY_V_MAJ }}.${{ matrix.cfg.PY_V_MIN }}
         architecture: ${{ matrix.cfg.arch }}
     - run: |
-        dir C:\msys64\usr\bin
-        doskey wget=C:\msys64\usr\bin\wget.exe
         python -c "import sys; print(sys.version)"
         echo ${{ matrix.cfg.PY_V_MAJ }}.${{ matrix.cfg.PY_V_MIN }}
+#    - run: choco install -y -r --no-progress wget
+    - run: new-item -itemtype symboliclink -path c:\windows\system32\ -name wget.exe -value C:\msys64\usr\bin\wget.exe
+      shell: pwsh
     - run: wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
     - run: choco install -y -r --no-progress vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
       if: matrix.cfg.CHOCO_VS_TOOLS=='vcbuildtools'
