--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,19 +23,18 @@ jobs:
             - { os: windows-2019, shell: cmd, arch: x86, runtime: vc14, CMAKE_PARAM_G: 'Visual Studio 14', CMAKE_PARAM_A: Win32, CHOCO_VS_TOOLS: 'vcbuildtools', CPCFG: '-win32', PY_V_MAJ: 3, PY_V_MIN: 4 }
             - { os: windows-2019, shell: cmd, arch: x64, runtime: vc16, CMAKE_PARAM_G: 'Visual Studio 16', CMAKE_PARAM_A: x64, CPCFG: '-win_amd64', PY_V_MAJ: 3, PY_V_MIN: 9 }
     steps: 
+#    - run: choco install -y -r --no-progress wget
+    - run: echo @C:\msys64\usr\bin\wget.exe > %SYSTEMROOT%\System32\wget.bat
+      if: runner.os == 'Windows'
+    - run: wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.cfg.PY_V_MAJ }}.${{ matrix.cfg.PY_V_MIN }}
         architecture: ${{ matrix.cfg.arch }}
-    - env: 
-        wget: C:\msys64\usr\bin\wget.exe
-        if: runner.os == 'Windows'
     - run: |
         python -c "import sys; print(sys.version)"
         echo ${{ matrix.cfg.PY_V_MAJ }}.${{ matrix.cfg.PY_V_MIN }}
-#    - run: choco install -y -r --no-progress wget
-    - run: wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
     - run: choco install -y -r --no-progress vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
       if: matrix.cfg.CHOCO_VS_TOOLS=='vcbuildtools'
     - run: choco install -y -r --no-progress ${{ matrix.cfg.CHOCO_VS_TOOLS }} winflexbison
