--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,7 @@
 on: 
     push:
-        tags-ignore: 
-        - 'v*'
+        branches: '*'
+        tags-ignore: 'v*'
     pull_request:
 
 jobs:
