--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,7 @@
 on: 
     push:
-        branches: '*'
-        tags-ignore: 'v*'
+        branches: '**'
+        tags: ''
     pull_request:
 
 jobs:
