--- a/OLD/2021-01-01 (0) docker-github-actions.yml
+++ b/OLD/2021-01-01 (0) docker-github-actions.yml
@@ -1,4 +1,9 @@
-on: [push, pull_request]
+#on: [push, pull_request]
+on: 
+    push:
+        branches: '**'
+        tags: '' # Restrict to blank tags
+    pull_request:
 jobs:
  # This job can be removed if a new release should not be created...
  deploy:
