--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -43,7 +43,7 @@ jobs:
     - run: |
         wget https://github.com/ros2/choco-packages/releases/download/2020-02-24/eigen.3.3.4.nupkg --no-check-certificate -nv
         choco install -y -s . eigen
-        refreshenv
+        call "%ALLUSERSPROFILE%\chocolatey\bin\RefreshEnv.cmd"
         cmake ${{ matrix.cfg.cmake_params }} .
         cmake --build . --config Release
         .\Release\my_project.exe
