--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -41,8 +41,7 @@ jobs:
         7z x C:\Windows\Temp\windows_extra_tools.zip -o"C:\Windows" -y
       shell: pwsh
     - run: |
-        where cmake
-        dir "C:\Program files\CMake\share"
+        where cmake        
         wget https://github.com/ros2/choco-packages/releases/download/2020-02-24/eigen.3.3.4.nupkg --no-check-certificate -nv
-        choco install -v -y -s . eigen & refreshenv & cmake ${{ matrix.cfg.cmake_params }} . & cmake --build . --config Release & .\Release\my_project.exe
+        choco install -y -s . eigen & dir "C:\ProgramData\chocolatey\lib\Eigen\share\cmake" & reg query HKEY_LOCAL_MACHINE\SOFTWARE\Kitware\CMake\Packages\Eigen3 & refreshenv & cmake ${{ matrix.cfg.cmake_params }} . & cmake --build . --config Release & .\Release\my_project.exe
       shell: cmd
