--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -44,5 +44,5 @@ jobs:
         where cmake
         reg add HKEY_LOCAL_MACHINE\SOFTWARE\Kitware\CMake\Packages /f
         wget https://github.com/ros2/choco-packages/releases/download/2020-02-24/eigen.3.3.4.nupkg --no-check-certificate -nv
-        choco install -y -s . eigen & dir "C:\ProgramData\chocolatey\lib\Eigen\share\cmake" & reg query HKEY_LOCAL_MACHINE\SOFTWARE\Kitware\CMake\Packages & refreshenv & cmake ${{ matrix.cfg.cmake_params }} . & cmake --build . --config Release & .\Release\my_project.exe
+        choco install -y eigen.3.3.4.nupkg & dir "C:\ProgramData\chocolatey\lib\Eigen\share\cmake" & reg query HKEY_LOCAL_MACHINE\SOFTWARE\Kitware\CMake\Packages & refreshenv & cmake ${{ matrix.cfg.cmake_params }} . & cmake --build . --config Release & .\Release\my_project.exe
       shell: cmd
