--- a/OLD/2021-01-01 (0) simple-github-actions.yml
+++ b/OLD/2021-01-01 (0) simple-github-actions.yml
@@ -1,6 +1,6 @@
 on: [push, pull_request]
 jobs:
- # This job can be removed if a new release should not be created...
+ # This job may be commented if a new release should not be created...
  deploy:
     runs-on: ubuntu-latest
     steps: 
