--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -41,12 +41,7 @@ jobs:
       if: contains(matrix.cfg.os, 'windows')
     - run: |
         rem Take 5 min...
-        rem choco uninstall -y mingw strawberryperl
-        wget http://www.ensta-bretagne.fr/lebars/Share/qt-sdk-win-opensource-2010.05.exe --no-check-certificate -nv
-        move /Y qt-sdk-win-opensource-2010.05.exe %SystemDrive%\
-        rem Take several min...
-        %SystemDrive%\qt-sdk-win-opensource-2010.05.exe /S
-        del /f /q %SystemDrive%\qt-sdk-win-opensource-2010.05.exe
+        choco uninstall -y mingw strawberryperl
         rem PATH
         wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
         7z x cmake_extra_tools.zip -o"%SystemDrive%" -y
@@ -54,8 +49,14 @@ jobs:
       shell: cmd
       if: contains(matrix.cfg.os, 'windows')
     - run: |
-        cmake ${{ matrix.cfg.cmake_params }} .
-        cmake --build .
-        ./Hello
-        cd ../..
-      shell: bash
+        where gcc
+        where g++
+      shell: cmd
+      if: contains(matrix.cfg.os, 'windows')
+#    - run: |
+#        cmake ${{ matrix.cfg.cmake_params }} .
+#        cmake --build .
+#        ./Hello
+#        cd ../..
+#      shell: bash
+#
