--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -39,19 +39,30 @@ jobs:
         7z x C:\Windows\Temp\windows_extra_tools.zip -o"C:\Windows" -y
       shell: pwsh
       if: runner.os == 'Windows'
-    - run: |        
-        rem choco uninstall -y mingw strawberryperl & rem Take 8 min...
-        wget http://www.ensta-bretagne.fr/lebars/Share/qt-sdk-win-opensource-2010.05.exe --no-check-certificate -nv
-        move /Y qt-sdk-win-opensource-2010.05.exe %SystemDrive%\        
-        %SystemDrive%\qt-sdk-win-opensource-2010.05.exe /S & rem Take 5 min...
-        del /f /q %SystemDrive%\qt-sdk-win-opensource-2010.05.exe
-        rem PATH
-        wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
-        7z x cmake_extra_tools.zip -o"%SystemDrive%" -y
-        %SystemDrive%\cmake_extra_tools\pathman /as C:\Qt\2010.05\qt\bin;C:\Qt\2010.05\bin;C:\Qt\2010.05\mingw\bin & true & rem Non-zero exit code...?
-      shell: cmd
-      if: contains(matrix.cfg.os, 'windows')
+    # Comment
     - run: |
+        echo 0
+        rem Comment
+        echo "C:\directory\to\add\to\path" >> $GITHUB_PATH
+        echo 1
+      shell: cmd
+      if: runner.os == 'Windows'
+#    - run: |        
+#        rem Take 8 min...
+#        rem choco uninstall -y mingw strawberryperl
+#        wget http://www.ensta-bretagne.fr/lebars/Share/qt-sdk-win-opensource-2010.05.exe --no-check-certificate -nv
+#        move /Y qt-sdk-win-opensource-2010.05.exe %SystemDrive%\
+#        rem Take 5 min...
+#        %SystemDrive%\qt-sdk-win-opensource-2010.05.exe /S
+#        del /f /q %SystemDrive%\qt-sdk-win-opensource-2010.05.exe
+#        rem PATH
+#        wget http://www.ensta-bretagne.fr/lebars/Share/cmake_extra_tools.zip --no-check-certificate -nv
+#        7z x cmake_extra_tools.zip -o"%SystemDrive%" -y
+#        %SystemDrive%\cmake_extra_tools\pathman /as C:\Qt\2010.05\qt\bin;C:\Qt\2010.05\bin;C:\Qt\2010.05\mingw\bin & true & rem Non-zero exit code...?
+#      shell: cmd
+#      if: contains(matrix.cfg.os, 'windows')
+    - run: |
+        echo %PATH%
         where gcc
         where g++
       shell: cmd
