--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -40,22 +40,16 @@ jobs:
       shell: pwsh
       if: runner.os == 'Windows'
     # Comment
-#    - run: |
-#        echo 0
-#        rem Comment
-#        echo "C:\directory\to\add\to\path" >> %GITHUB_PATH%
-#        echo 1
-#      shell: cmd
+    - run: |
+        echo 0
+        rem Comment
+        echo "C:\directory\to\add\to\path" >> %GITHUB_PATH%
+        echo 1
+      shell: cmd
 #    - run: |
 #        # Comment
 #        echo "C:\directory\to\add\to\path" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 #      shell: pwsh
-    - run: |
-        # Comment
-        echo "C:\directory\to\add\to\path" >> $GITHUB_PATH
-        perl -v
-        sed --version
-      shell: bash
 #    - run: |        
 #        rem Take 8 min...
 #        rem choco uninstall -y mingw strawberryperl
