--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
         matrix:
             cfg:
-            - { os: ubuntu-18.04-gcc-8, py_v_maj: 3, py_v_min: 6, desc: 'Ubuntu 18.04 GCC 8 Python 3.6 tests' }
+            - { os: ubuntu-18.04, gcc_v: 8, py_v_maj: 3, py_v_min: 6, desc: 'Ubuntu 18.04 GCC 8 Python 3.6 tests' }
     name: ${{ matrix.cfg.desc }}
     steps: 
     - uses: actions/checkout@v2
@@ -22,9 +22,16 @@ jobs:
       with:
         python-version: ${{ matrix.cfg.py_v_maj }}.${{ matrix.cfg.py_v_min }}
     - run: |
-        python3 -c "import sys; print(sys.version)"
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ matrix.cfg.gcc_v }} 100 --slave /usr/bin/g++ g++ /usr/bin/g++-${{ matrix.cfg.gcc_v }}
         gcc --version
         g++ --version
+
+        python -c "import sys; print(sys.version)"
+        python3 -c "import sys; print(sys.version)"
+        python -m pip --version
+        python3 -m pip --version
+        pip --version
+        pip3 --version
 
         sudo apt-get -q update ; sudo apt-get -y install flex bison libeigen3-dev || true
   
