--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,7 +20,7 @@ jobs:
 
  jtestlj:
     name: Windows
-    runs-on: windows-latest
+    runs-on: windows-2016
     steps: 
     - uses: actions/checkout@v2
     - run: |
